# datalake-bundle

./: .pylintrc  README.md  environment.yml  pylint.sh  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml
docs/: configuration.md  console-commands.md  notebook-functions.md  parsing-fields.md  structure.md  tables-management.md  tables.md
src/datalakebundle/: DataLakeBundle.py  DataLakeBundleTest.py  containerInit.py  imports.py
src/datalakebundle/_config/: config.yaml  config_test.yaml
src/datalakebundle/acl/: AclConfigReader.py  AclPathResolver.py
src/datalakebundle/acl/check/: AclCheckCommand.py  AclChecker.py
src/datalakebundle/acl/export/: AclExportCommand.py  AclExporter.py
src/datalakebundle/acl/set/: AclSetCommand.py  AclSetter.py  AclStringGenerator.py
src/datalakebundle/client/: ServiceClientFactory.py
src/datalakebundle/csv/: csv_append.py  csv_overwrite.py  csv_reader.py  csv_write_errorifexists.py  csv_write_ignore.py
src/datalakebundle/csv/lineage/: CsvRead.py
src/datalakebundle/dataframe/: DataFrameShowMethod.py  DataFrameShowMethodInjector.py  DataFrameShowMethodInterface.py
src/datalakebundle/delta/: DeltaStorage.py  delta_append.py  delta_overwrite.py  delta_reader.py  delta_write_errorifexists.py  delta_write_ignore.py
src/datalakebundle/delta/lineage/: DeltaRead.py
src/datalakebundle/filesystem/: DummyFilesystem.py  FilesystemInjector.py  FilesystemInterface.py
src/datalakebundle/hdfs/: HdfsDelete.py  HdfsExists.py
src/datalakebundle/jdbc/: TableReader.py
src/datalakebundle/json/: json_append.py  json_overwrite.py  json_reader.py  json_write_errorifexists.py  json_write_ignore.py
src/datalakebundle/json/lineage/: JsonRead.py
src/datalakebundle/lineage/: FileRead.py  PathWriter.py  PathWriterParser.py
src/datalakebundle/notebook/: NotebookModuleResolver.py  decorators.py
src/datalakebundle/notebook/decorator/: DataFrameReturningDecorator.py  DuplicateColumnsChecker.py  dataFrameLoader.py  data_frame_loader.py  data_frame_saver.py  transformation.py
src/datalakebundle/notebook/lineage/: TableWriter.py  TableWriterParser.py
src/datalakebundle/parquet/: parquet_append.py  parquet_overwrite.py  parquet_reader.py  parquet_write_errorifexists.py  parquet_write_ignore.py
src/datalakebundle/parquet/lineage/: ParquetRead.py
src/datalakebundle/read/: PathReader.py
src/datalakebundle/table/: ExternalTableConfig.py  MissingTablesCreatorCommand.py  SchemaGetter.py  TableConfig.py  TableCreator.py  TableCreatorCommand.py  TableDeleterCommand.py  TableExistenceChecker.py  TableManager.py  TableNames.py  TableWriter.py  TablesConfigManager.py  TablesOptimizerCommand.py  UnknownConfigAliasException.py  UnknownTableException.py  tableActionCommand.py  table_action_command.py
src/datalakebundle/table/class_/: table_schema_loader.py
src/datalakebundle/table/config/: ExternalTableConfig.py  FieldsResolver.py  FieldsResolverTest.py  TableConfig.py  TableConfigManager.py  TableConfigParser.py  TableConfigParserTest.py  TablesConfigCompilerPass.py  TablesConfigManager.py  TablesConfigParser.py  ValueResolver.py  ValueResolverFactory.py  primitiveValue.py  primitive_value.py  table_params.py
src/datalakebundle/table/create/: MissingTablesCreatorCommand.py  TableCreator.py  TableCreatorCommand.py  TableDefinition.py  TableDefinitionFactory.py  TableRecreator.py  TableRecreatorCommand.py
src/datalakebundle/table/delete/: TableDeleter.py  TableDeleterCommand.py
src/datalakebundle/table/identifier/: DefaultValueResolverInterface.py  Expression.py  IdentifierParser.py  IdentifierParserInterface.py  IdentifierParserTest.py  UnknownIdentifierException.py  ValueResolverInterface.py  fillTemplateTest.py  fill_template.py  fill_template_test.py  placeholdersExtractor.py  placeholders_extractor.py
src/datalakebundle/table/name/: TableNameTemplateGetter.py  TableNames.py  TableNamesParser.py  TableNamesPreparer.py
src/datalakebundle/table/optimize/: TableOptimizerCommand.py  TablesOptimizerCommand.py
src/datalakebundle/table/parameters/: FieldsResolver.py  FieldsResolverTest.py  TableParameters.py  TableParametersManager.py  (+5 more)
src/datalakebundle/test/: DummySparkFactory.py  SimpleTargetPathResolver.py  SparkSessionFactory.py  TargetPathResolver.py  TestSchema.py
src/datalakebundle/write/: PathWriter.py  PathWriterDecorator.py
(+51 files in other folders)
