[tool.poetry]
name = "datalake-bundle"
version = "0.5.0"
description = "DataLake tables management bundle for the Bricksflow Framework"
readme = "README.md"
repository = "https://github.com/bricksflow/datalake-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "datalakebundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
injecta = "^0.9.3"
pyfony-bundles = "^0.3.2"
console-bundle = "^0.3.1"
databricks-bundle = ">=0.7.0a1"
simpleeval = ">=0.9.10,<1.0.0"

[tool.poetry.dev-dependencies]
pyfony-core = "^0.7.1"
pylint = "^2.4"
pytest = "^5.2"
databricks-connect = ">=7.3.7"

[tool.poetry.plugins."pyfony.bundle"]
create = "datalakebundle.DataLakeBundle:DataLakeBundle"

[pyfony.bootstrap]
containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
rootModuleName = "datalakebundle"
