[tool.poetry]
name = "datalake-bundle"
version = "1.2.3"
description = "DataLake tables management bundle for the Daipe Framework"
readme = "README.md"
repository = "https://github.com/daipe-ai/datalake-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "datalakebundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
simpleeval = ">=0.9.10,<1.0.0"
injecta = "0.10.*"
pyfony-bundles = "0.4.*"
console-bundle = "^0.5"
daipe-core = "^1.3.2"
deepdiff = "^5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyre-check = "^0.9.10"
black = "^20.8b1"
pep8-naming = "^0.11.1"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"
pyspark = "^3.1.1"
pylint = "^2.12.2"
logger-bundle = "^0.7.0"

[tool.poetry.plugins."pyfony.bundle"]
create = "datalakebundle.DataLakeBundle:DataLakeBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "datalakebundle"

[tool.black]
line-length = 140

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint --rcfile=.pylintrc --module-rgx=.+ src"
