[tool.poetry]
name = "datalake-bundle"
version = "1.2.4"
description = "DataLake tables management bundle for the Daipe Framework"
readme = "README.md"
repository = "https://github.com/daipe-ai/datalake-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "datalakebundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
simpleeval = ">=0.9.10,<1.0.0"
injecta = "0.10.*"
pyfony-bundles = "0.4.*"
console-bundle = "^0.5"
daipe-core = "^1.2"
pyspark-bundle = "^1.2"
deepdiff = "^5"

[tool.poetry.dev-dependencies]
pyspark = "^3.2.0"
pylint = "^2.12.2"
pyre-check = "^0.9.10"
black = "^20.8b1"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"

[tool.poetry.plugins."pyfony.bundle"]
create = "datalakebundle.DataLakeBundle:DataLakeBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "datalakebundle"

[tool.black]
line-length = 140

[tool.pylint.basic]
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "wrong-import-order",
    "duplicate-code",
    "line-too-long",
    "bad-continuation",
    "too-many-arguments",
    "too-few-public-methods",
    "ungrouped-imports",
    "no-self-use",
    "too-many-locals",
]

good-names = ["e", "i", "k", "n", "f", "v", "df"]

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint src"
